# akash-deploy-rs

./: .env.example  .gitignore  AGENTS.md  AI-Disclosure.md  Cargo.toml  LICENSE  README.md  carp.json  justfile
.claude/skills/akash-manifest-spec/: SKILL.md
.claude/skills/akash-manifest-spec/references/: checklists.md  examples.md  quick-reference.md  validation.md
examples/: deploy.rs
src/: backend.rs  canonical.rs  certificate.rs  client.rs  error.rs  groupspec.rs  jwt.rs  lib.rs  manifest.rs  sdl.rs  state.rs  storage.rs  template.rs  traits.rs  types.rs  workflow.rs
src/auth/: jwt.rs  mod.rs
src/manifest/: manifest.rs  mod.rs
src/sdl/: groupspec.rs  mod.rs  sdl.rs  template.rs
src/storage/: file_backed.rs
src/store/: file_backed.rs  file_backed_session.rs  mod.rs  record.rs  session.rs  stdout.rs  store.rs  tests.rs
tests/: README.md  go.mod  go.sum  justfile  main.go  template_tests.rs  test.sh  test_client_live.rs
tests/examples/rust-jwt-gen/: Cargo.toml  README.md
tests/examples/rust-jwt-gen/src/: main.rs
tests/fixtures/comprehensive/: jwt.txt  manifest-hash.txt  manifest.json
tests/fixtures/gpu/: jwt.txt  manifest-hash.txt  manifest.json  pubkey.txt
tests/fixtures/simple/: jwt.txt  manifest-hash.txt  manifest.json
tests/rust-jwt-gen/: Cargo.toml  README.md
tests/testdata/: comprehensive.yaml  gpu.yaml  multi-service.yaml  oline.yaml  permissionless.yaml  template_simple.yaml
