[package]
name = "akash-deploy-rs"
version = "0.0.3"
edition = "2021"
authors = ["PermissionlesWeb <permissionlessweb@proton.me"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/permissionlessweb/akash-deploy-rs"
description = "Standalone Akash deployment workflow engine"
exclude = [
    "tests/",
    ".claude/",
    "*.md",
    "!README.md",
    "justfile",
]

[dependencies]
thiserror = "2.0.17"
tokio = { version = "1.40", features = ["time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34-deprecated"
async-trait = "0.1"

# Certificate generation
rcgen = { version = "0.13", features = ["pem"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.9.2"
time = "0.3"
base64 = "0.22.1"

# Private key encryption (optional but useful)
chacha20poly1305 = { version = "0.10.1" }
argon2 = "0.5"

# Default client dependencies (feature-gated)
layer-climb = { version = "0.8.8", optional = true }
dirs = { version = "5.0", optional = true }
reqwest = { version = "0.12", features = ["rustls-tls"], optional = true }
rustls-pemfile = { version = "2.0", optional = true }
prost = { version = "0.14.3" }
tonic = { version = "0.14.3", optional = true }
tonic-prost = { version = "0.14.3", optional = true }
pbjson-types = "0.9.0"

[features]
default = ["sdl-templates"]
sdl-templates = []
rpc = ["tonic"]
default-client = ["layer-climb", "tokio/fs", "dirs", "reqwest", "rustls-pemfile","tonic-prost", "tonic", "rpc"]

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
