[package]
name = "akash-deploy-rs"
version = "0.0.5"
edition = "2021"
authors = ["PermissionlesWeb <permissionlessweb@proton.me"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/permissionlessweb/akash-deploy-rs"
description = "Standalone Akash deployment workflow engine"
exclude = ["tests/", ".claude/", "*.md", "!README.md", "justfile"]

[features]
default = ["sdl-templates"]
sdl-templates = []
rpc = ["tonic","tonic-prost"]
file-storage = ["tokio/fs", "dirs"]
default-client = [
    "layer-climb",
    "reqwest",
    "rustls-pemfile",
    "tonic-prost",
    "tonic",
    "rpc",
    "k256",
    "bip32",
    "coins-bip39",
    "ripemd",
]

[dependencies]
argon2 = "0.5"
async-trait = "0.1"
base64 = "0.22.1"
bip32 = { version = "0.5", features = ["secp256k1"], optional = true }
coins-bip39 = { version = "0.8", optional = true }
chacha20poly1305 = { version = "0.10.1" }
dirs = { version = "5.0", optional = true }
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa", "sha256"], optional = true }
layer-climb = { git = "https://github.com/permissionlessweb/climb", branch = "temp-patch", optional = true }
pbjson-types = "0.9.0"
prost = { version = "0.14.3" }
rand = "0.9.2"
rcgen = { version = "0.13", features = ["pem"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
ripemd = { version = "0.1", optional = true }
rustls-pemfile = { version = "2.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34-deprecated"
sha2 = "0.10"
thiserror = "2.0.17"
time = "0.3"
tokio = { version = "1.40", features = ["time"] }
tonic = { version = "0.14.3", optional = true }
tracing = "0.1"
tonic-prost = { version = "0.14.3", optional = true }

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "deploy"
required-features = ["default-client", "file-storage"]