[package]
name = "rust-jwt-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use local package (relative path from tests/rust-jwt-gen)
akash-deploy-rs = { path = "../.." }

# Minimal deps for JWT + manifest generation
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"

# Crypto for key derivation and signing
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
bech32 = "0.8"
bip32 = { version = "0.5", features = ["secp256k1"] }
coins-bip39 = "0.8"
ripemd = "0.1"
