[package]
name = "rust-jwt-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use local package (relative path from tests/examples/rust-jwt-gen)
akash-deploy = { path = "../../.." }

# Minimal deps for JWT + manifest generation
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
